[build-system]
requires = ["setuptools>=61.0.0", "wheel","quicksectx>=0.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFastNER"
dynamic = ["dependencies", "version"]
authors = [{name = "Jianlin", email="jianlinshi.cn@gmail.com"}]
description = "PyFastNER is the python implementation of FastNER, which is orginally developed using Java. It uses hash function to process multiple rules at the same time. Similar to FastNER, PyFastNER supports token-based rules (FastNER--under developing) and character-based rules (FastCNER). It is licensed under the MIT License."
keywords=['PyFastNER', 'ner', 'regex']
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme='README.md'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "PyFastNER.__version__" }

[project.urls]
Source = "https://github.com/jianlins/PyFastNER"